`mktemp()` is deprecated, use `mkstemp()` instead
Although it was used in tests and examples, therefore with no related
security issues as far as I can see, `mktemp()` is deprecated:
https://docs.python.org/3/library/tempfile.html#deprecated-functions-and-variables

--- a/notebooks/advanced_indexing.ipynb
+++ b/notebooks/advanced_indexing.ipynb
@@ -2647,7 +2647,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5f = h5py.File(tempfile.mktemp(), driver='core', backing_store=False)"
+    "h5f = h5py.File(tempfile.mkstemp()[0], driver='core', backing_store=False)"
    ]
   },
   {
