--- a/notebooks/dask_copy.ipynb
+++ b/notebooks/dask_copy.ipynb
@@ -172,8 +172,8 @@
     "def h5fmem(**kwargs):\n",
     "    \"\"\"Convenience function to create an in-memory HDF5 file.\"\"\"\n",
     "\n",
-    "    # need a file name even tho nothing is ever written\n",
-    "    fn = tempfile.mktemp()\n",
+    "    # need a file even tho nothing is ever written\n",
+    "    fd, fn = tempfile.mkstemp()\n",
     "\n",
     "    # file creation args\n",
     "    kwargs['mode'] = 'w'\n",
@@ -181,7 +181,7 @@
     "    kwargs['backing_store'] = False\n",
     "\n",
     "    # open HDF5 file\n",
-    "    h5f = h5py.File(fn, **kwargs)\n",
+    "    h5f = h5py.File(fd, **kwargs)\n",
     "\n",
     "    return h5f\n",
     "\n",
